# AviSynthPlus

./: .editorconfig  .gitignore  .readthedocs.yaml  CMakeLists.txt  CNAME  README.md  index.html
.github/workflows/: build.yml
avs_core/: CMakeLists.txt  Files.cmake  TargetArch.cmake  Version.cmake  avisynth.pc.in  avisynth_conf.h.in
avs_core/convert/: convert.cpp  convert.h  convert_audio.cpp  convert_audio.h  convert_bits.cpp  convert_bits.h  convert_helper.cpp  convert_helper.h  convert_matrix.cpp  convert_matrix.h  convert_planar.cpp  convert_planar.h  convert_rgb.cpp  convert_rgb.h  convert_yuy2.cpp  convert_yuy2.h
avs_core/convert/intel/: convert_audio_avx2.cpp  convert_audio_sse.cpp  convert_bits_avx2.cpp  convert_bits_avx2.h  convert_bits_sse.cpp  convert_bits_sse.h  convert_planar_avx2.cpp  convert_planar_avx2.h  convert_planar_sse.cpp  convert_planar_sse.h  convert_rgb_avx2.cpp  convert_rgb_avx2.h  convert_rgb_avx512.cpp  convert_rgb_avx512.h  convert_rgb_sse.cpp  convert_rgb_sse.h  convert_sse.cpp  convert_sse.h  convert_yuy2_sse.cpp  convert_yuy2_sse.h
avs_core/core/: AVSMap.h  AviHelper.cpp  AviHelper.h  CompatEnvironment.h  DeviceManager.cpp  FilterConstructor.cpp  FilterConstructor.h  FilterGraph.cpp  InternalEnvironment.h  MTGuard.cpp  MTGuard.h  PluginManager.cpp  PluginManager.h  Prefetcher.cpp  ThreadPool.h  alignplanar.cpp  alignplanar.h  audio.cpp  audio.h  avisynth.cpp  avisynth.def  avisynth.rc  avisynth_c.cpp  avs_simd_c.h  cache.cpp  cache.h  clip_info.h  cpuid.cpp  function.h  info.cpp  info.h  initguid.cpp  interface.cpp  internal.h  main.cpp  strings.cpp  strings.h  vartable.h  version.h.in
avs_core/core/fonts/: fixedfonts.cpp  fixedfonts.h
avs_core/core/parser/: expression.cpp  expression.h  script.cpp  script.h  scriptparser.cpp  scriptparser.h  tokenizer.cpp  tokenizer.h
avs_core/filters/: color.cpp  color.h  colorbars_const.h  combine.cpp  combine.h  convolution.cpp  convolution.h  debug.cpp  debug.h  edit.cpp  edit.h  field.cpp  field.h  focus.cpp  focus.h  fps.cpp  fps.h  greyscale.cpp  greyscale.h  histogram.cpp  histogram.h  layer.cpp  layer.h  layer.hpp  levels.cpp  levels.h  limiter.cpp  limiter.h  merge.cpp  merge.h  misc.cpp  misc.h  planeswap.cpp  planeswap.h  resample.cpp  resample.h  resample_functions.cpp  resample_functions.h  resize.cpp  resize.h  (+7 more)
avs_core/filters/AviSource/: avi_source.cpp  avi_source.h
avs_core/filters/aarch64/: turn_neon.cpp  turn_neon.h
avs_core/filters/conditional/: conditional.cpp  conditional.h  conditional_functions.cpp  conditional_functions.h  conditional_reader.cpp  conditional_reader.h
avs_core/filters/conditional/intel/: conditional_functions_sse.cpp  conditional_functions_sse.h
avs_core/filters/exprfilter/: exprfilter.cpp  exprfilter.h
avs_core/filters/intel/: check_avx512.h  focus_avx2.cpp  focus_avx2.h  focus_sse.cpp  focus_sse.h  getalpharect_avx2.cpp  getalpharect_avx512.cpp  getalpharect_avx512.h  getalpharect_impl.h  getalpharect_scalar.h  getalpharect_sse41.cpp  greyscale_sse.cpp  greyscale_sse.h  layer_avx2.cpp  layer_avx2.h  layer_sse.cpp  layer_sse.h  limiter_sse.cpp  limiter_sse.h  merge_avx2.cpp  merge_avx2.h  merge_sse.cpp  merge_sse.h  planeswap_sse.cpp  planeswap_sse.h  resample_avx2.cpp  resample_avx2.h  resample_avx512.cpp  resample_avx512.h  resample_avx512.hpp  resample_avx512_fast.cpp  resample_avx512b.cpp  resample_sse.cpp  resample_sse.h  resize_sse.cpp  resize_sse.h  text-overlay_sse.cpp  text-overlay_sse.h  turn_avx2.cpp  turn_avx2.h  (+2 more)
avs_core/filters/overlay/: 444convert.cpp  OF_add.cpp  OF_blend.cpp  OF_darken.cpp  OF_difference.cpp  OF_exclusion.cpp  OF_multiply.cpp  OF_softhardlight.cpp  blend_common.cpp  blend_common.h  imghelpers.h  overlay.cpp  overlay.h  overlayfunctions.h
avs_core/filters/overlay/aarch64/: blend_common_neon.cpp  blend_common_neon.h
avs_core/filters/overlay/intel/: 444convert_avx2.cpp  444convert_avx2.h  444convert_sse.cpp  444convert_sse.h  OF_multiply_avx2.cpp  OF_multiply_avx2.h  OF_multiply_sse.cpp  OF_multiply_sse.h  blend_common_avx2.cpp  blend_common_avx2.h  blend_common_sse.cpp  blend_common_sse.h  masked_merge_avx2_impl.hpp  masked_rowprep_avx2.cpp  masked_rowprep_avx2.h  masked_rowprep_avx2_impl.h  masked_rowprep_sse41.cpp
avs_core/include/: avisynth.h  avisynth_c.h
avs_core/include/avs/: config.h  cpuid.h
distrib/: gpl-ru.txt
distrib/Readme/: readme_history.txt
distrib/WinInstaller/: avisynth+.iss  avisynth+_arm64.iss
distrib/docs/english/source/: conf.py  index.rst
distrib/docs/english/source/avisynthdoc/: changelist26.rst  changelist34.rst  changelist34pre.rst  changelist35.rst  changelist36.rst  changelist37.rst  changelist371.rst  changelist372.rst  changelist373.rst  changelist374.rst  changelist375.rst  changelist376.rst  license.rst  links.rst  overview.rst  releasenotes.rst
distrib/docs/english/source/avisynthdoc/FilterSDK/: AssemblerOptimizing.rst  AviSynthInterfaceVersion.rst  AviSynthTwoFiveAudio.rst  AviSynthTwoFivePixelType.rst  AviSynthTwoFiveSDK.rst  C_api.rst  Cplusplus_api.rst  DataAlignment.rst  DataStorageInAviSynth.rst  FilterSDK.rst  InstructionPairing.rst  IntermediateMmxOptimization.rst  IsMovntqFaster.rst  SDKHistory.rst  SDKLicense.rst  SDKNecessaries.rst  SimpleSample10b.rst  SimpleSample11.rst  SimpleSample12.rst  SimpleSample13a.rst  SimpleSample14.rst  SimpleSample15a.rst  SimpleSample16.rst  SimpleSample17.rst  SimpleSampleClass.rst  TwoFiveFastInvert.rst  TwoFiveInvert.rst  VideoInfo.rst  (+1 more)
plugins/: CMakeLists.txt
plugins/ConvertStacked/: CMakeLists.txt  ConvertStacked.cpp
plugins/DirectShowSource/: CMakeLists.txt  directshow_source.cpp  directshow_source.h
plugins/ImageSeq/: CMakeLists.txt  ImageReader.cpp  ImageSeq.cpp  ImageSeq.h  ImageWriter.cpp
plugins/Shibatch/: CMakeLists.txt  ssrc-convert.cpp  ssrc-convert.h  ssrc.cpp  supereq.cpp
plugins/TimeStretch/: CMakeLists.txt  TimeStretch.cpp
plugins/TimeStretch/SoundTouch/: FIRFilter.cpp  STTypes.h
plugins/VDubFilter/: CMakeLists.txt  VDubFilter.cpp
plugins/VFAPIFilter/: CMakeLists.txt  VFAPIFilter.cpp
(+78 files in other folders)
